Added Favorite Books and Documents features
